Fix overflow bug

--- a/src/components/styles/map.css
+++ b/src/components/styles/map.css
@@ -29,12 +29,12 @@
   line-height: 60px;
   -moz-border-radius: 50%; /* or 50% */
   border-radius: 50%; /* or 50% */
-  transform: translate(-35%, -42%)
+  transform: translate(-35%, -42%);
 }
 @media (min-width: 992px) {
   .map {
     width: 100%;
-    height: 85vh;
+    height: 80vh;
     order: 99;
   }
 }
